syntax = "proto3";

package iclab.abc.resource;

import "iclab/abc/common.proto";
import "iclab/abc/enum.proto";

option java_package = "kaist.iclab.abc.protos";
option java_outer_classname = "ResourceProtos";


message AppUsageEvent {
    string package_name = 1;
    string name = 2;
    bool is_system_app = 3;
    bool is_updated_system_app = 4;
    string type = 5;
}

message AppUsageStat {
    string package_name = 1;
    string name = 2;
    bool is_system_app = 3;
    bool is_updated_system_app = 4;
    int64 start_time = 5;
    int64 end_time = 6;
    int64 last_time_used = 7;
    int64 total_time_foreground = 8;
}

message Battery {
    float level = 1;
    int32 temperature = 2;
    string plugged = 3;
    string status = 4;
}

message CallLog {
    string number = 1;
    string type = 2;
    int64 duration = 3;
    string presentation = 4;
    int64 data_usage = 5;

    string contact = 6;
    int32 times_contacted = 7;
    bool is_starred = 8;
    bool is_pinned = 9;
}

message Connectivity {
    bool is_connected = 1;
    string type = 2;
}

message DataTraffic {
    int64 duration = 1;
    int64 rx_kb = 2;
    int64 tx_kb = 3;
}

message DeviceEvent {
    string type = 1;
}

message Location {
    double latitude = 1;
    double longitude = 2;
    double altitude = 3;
    float accuracy = 4;
    float speed = 5;
}

message Media {
    string mime_type = 1;
    string bucket_display = 2;
}

message Message {
    string number = 1;
    string message_class = 2;
    string message_box = 3;
    string contact = 4;
    int32 times_contacted = 5;
    bool is_starred = 6;
    bool is_pinned = 7;
}

message Notification {
    string package_name = 1;
    string name = 2;
    bool is_system_app = 3;
    bool is_updated_system_app = 4;
    string key = 5;
    bool is_posted = 6;
    string title = 7;
    string visibility = 8;
    string category = 9;
    bool has_vibration = 10;
    bool has_sound = 11;
    string light_color = 12;
}

message PhysicalActivityEvent {
    string type = 1;
    float confidence = 2;
}

message Wifi {
    string bssid = 1;
    string ssid = 2;
    int32 frequency = 3;
    int32 rssi = 4;
}

message PhysicalStatus {
    string activity = 1;
    string type = 2;
    int64 start_time = 3;
    int64 end_time = 4;
    float value = 5;
}

message PhysicalActivityTransition {
    string transition_type = 1;
}

message RawSensor {
    string type = 1;
    double value_1 = 2;
    double value_2 = 3;
    double value_3 = 4;
    double value_4 = 5;
}

message Weather {
    double latitude = 1;
    double longitude = 2;
    float temperature = 3;
    float rainfall = 4;
    string sky = 5;
    float wind_ew = 6;
    float wind_ns = 7;
    float humidity = 8;
    string rain_type = 9;
    string lightning = 10;
    float wind_speed = 11;
    float wind_direction = 12;
    float so2_value = 13;
    float so2_grade = 14;
    float co_value = 15;
    float co_grade = 16;
    float no2_value = 17;
    float no2_grade = 18;
    float o3_value = 19;
    float o3_grade = 20;
    float pm10_value = 21;
    float pm10_grade = 22;
    float pm25_value = 23;
    float pm25_grade = 24;
    float air_value = 25;
    float air_grade = 26;
}

message EmotionalStatus {
    float anger = 1;
    float contempt = 2;
    float disgust = 3;
    float fear = 4;
    float happiness = 5;
    float neutral = 6;
    float sadness = 7;
    float surprise = 8;
}

message Survey {
    string title = 1;
    string message = 2;
    int64 delivered_timestamp = 3;
    int64 reaction_timestamp = 4;
    int64 first_question_timestamp = 5;
    string response = 6;
}

message BinaryFile {
    int64 size = 1;
    string mime_type = 2;
    string meta_data = 3;
    bytes data = 4;
}

message InstalledApp {
    int64 first_install_time = 1;
    int64 last_updated_time = 2;
    string package_name = 3;
    string name = 4;
    bool is_system_app = 5;
    bool is_updated_system_app = 6;
}


message RawData {
    iclab.abc.common.Time time = 1;
    string email = 2;
    iclab.abc.enum.DataSourceType source_type = 3;
    string source_info = 4;
    string experiment_uuid = 5;
    string experiment_group = 6;
    oneof data {
        AppUsageEvent app_usage_event = 7;
        AppUsageStat app_usage_stat = 8;
        Battery battery = 9;
        CallLog call_log = 10;
        Connectivity connectivity = 11;
        DataTraffic data_traffic = 12;
        DeviceEvent device_event = 13;
        Location location = 14;
        Media media = 15;
        Message message = 16;
        Notification notification = 17;
        PhysicalActivityEvent physical_activity_event = 18;
        Wifi wifi = 19;
        PhysicalStatus physical_status = 20;
        RawSensor raw_sensor = 21;
        Weather weather = 22;
        EmotionalStatus emotional_status = 23;
        Survey survey = 24;
        BinaryFile binary_file = 25;
        InstalledApp installed_app = 26;
        PhysicalActivityTransition activity_transition = 27;
    }
}
